codama-macros/tests/codama_attribute/values_nodes/pda_value_node/invalid_name.fail.rs
use codama_macros::codama;

#[codama(default_value = pda(name = invalid))]
pub struct TestWithWrongValue;

#[codama(default_value = pda(invalid = "authority"))]
pub struct TestWithWrongKey;

fn main() {}
